<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/question_Text_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text=""
        android:textSize="20sp"
        tools:text="Texto para el entorno" />

    <Button
        android:id="@+id/answer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/question_Text_View"
        android:text="@string/answer_button_text" />


    <LinearLayout
        android:id="@+id/difficulty_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:visibility="invisible">


        <Button
            android:id="@+id/hard_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorHardButton"
            android:text="@string/hard_button_text" />

        <Button
            android:id="@+id/doubt_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:backgroundTint="@color/colorDoubtButton"
            android:text="@string/doubt_button_text" />

        <Button
            android:id="@+id/easy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:backgroundTint="@color/colorEasyButton"
            android:text="@string/easy_button_text" />


    </LinearLayout>

</RelativeLayout>